--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+  shared_preferences: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
